keys on shader attributes get disconnected each time a Blender scene is closed. #92979

Closed
opened 2021-11-10 05:02:04 +01:00 by jayjayp · 7 comments

System Information
Operating system: Windows 10
Graphics card: Geforce GTX 3080

2nd system tried
Operating system: Windows 10
Graphics card: Quadro P1000

Blender Version
Broken: Blender 3.0.0 beta
Worked: 2.93

Caused by 6321dd3d40

Short description of error
Keyed attribute on shaders are disconnected upon each re-opening of a scene. If I key the emitter of a shader, it gets disconnected after saving, closing and reopening the file, into another channel called Default Value. Each time I resave, reopen, it reappears as a new Default Value channel on top of the previous one.

Exact steps for others to reproduce the error
Make a principle BSDF shader, key the emitter at frame 1, value 0, at frame 100, value 10. Save, close and reopen the file : the keys are disconnected from the shader's emitter channel but still visible in the graph editor as Default Value.

**System Information** Operating system: Windows 10 Graphics card: Geforce GTX 3080 2nd system tried Operating system: Windows 10 Graphics card: Quadro [P1000](https://archive.blender.org/developer/P1000.txt) **Blender Version** Broken: Blender 3.0.0 beta Worked: 2.93 Caused by 6321dd3d40 **Short description of error** Keyed attribute on shaders are disconnected upon each re-opening of a scene. If I key the emitter of a shader, it gets disconnected after saving, closing and reopening the file, into another channel called Default Value. Each time I resave, reopen, it reappears as a new Default Value channel on top of the previous one. **Exact steps for others to reproduce the error** Make a principle BSDF shader, key the emitter at frame 1, value 0, at frame 100, value 10. Save, close and reopen the file : the keys are disconnected from the shader's emitter channel but still visible in the graph editor as Default Value.
Author

Added subscriber: @jayjayp2

Added subscriber: @jayjayp2
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-11-10 08:29:12 +01:00
Member

Can confirm, suspect is own 8b516d8712

Can confirm, suspect is own 8b516d8712
Member

Nope, caused by 6321dd3d40

Nope, caused by 6321dd3d40

This issue was referenced by aa2f6e5977

This issue was referenced by aa2f6e59770896a981831c432667bbf58e232ce2
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92979
No description provided.